// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputSearch renders with custom value 1`] = `
<div>
  <div
    class="sc-blHHSb jkzuhY"
  >
    <label
      class="sc-gtLWhw hBKjzg"
    >
      <div
        data-testid="lock-circle-icon"
      >
        LockCircleIcon
      </div>
    </label>
    <input
      class="sc-egkSDF diqCCu"
      placeholder="Search..."
      value="Test search"
    />
    <div
      class="sc-fAUdSK gtBNoE"
    />
  </div>
</div>
`;

exports[`InputSearch renders with default props 1`] = `
<div>
  <div
    class="sc-blHHSb jkzuhY"
  >
    <label
      class="sc-gtLWhw hBKjzg"
    >
      <div
        data-testid="lock-circle-icon"
      >
        LockCircleIcon
      </div>
    </label>
    <input
      class="sc-egkSDF diqCCu"
      placeholder="Search..."
      value=""
    />
    <div
      class="sc-fAUdSK gtBNoE"
    />
  </div>
</div>
`;
